--- a/apexqtechnology/privacy/tax_caculation.html
+++ b/apexqtechnology/privacy/tax_caculation.html
@@ -8,7 +8,7 @@
     </head>
     <body>
     <strong>Privacy Policy</strong> <p>
-                  ApexQ technology built the 房屋/土地開發成本計算機-免費、簡單、專業 app as
+                  ApexQ technology built the [台灣] 土地增值稅計算機 - 免費、流暢的土增稅估算器 app as
                   a Free app. This SERVICE is provided by
                   ApexQ technology at no cost and is intended for use as
                   is.
@@ -25,7 +25,7 @@
                 </p> <p>
                   The terms used in this Privacy Policy have the same meanings
                   as in our Terms and Conditions, which is accessible at
-                  房屋/土地開發成本計算機-免費、簡單、專業 unless otherwise defined in this Privacy Policy.
+                  [台灣] 房屋貸款計算機 - 免費、簡單的房貸試算器 unless otherwise defined in this Privacy Policy.
                 </p> <p><strong>Information Collection and Use</strong></p> <p>
                   For a better experience, while using our Service, I
                   may require you to provide us with certain personally
